--- a/src/app/pages/calories-calculator/calories-calculator.page.scss
+++ b/src/app/pages/calories-calculator/calories-calculator.page.scss
@@ -135,7 +135,7 @@
   // padding-top: 50px;
 }
 
-.summary{
-  padding: 1%;
-  // color:#ffffff;
-}
+// .summary{
+//   padding: 1%;
+//   // color:#ffffff;
+// }
