--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -10,7 +10,7 @@ ion-text {
     --highlight-height: 0;
     --inner-border-width: 0;
     --background: var(--main-color);
-    border-radius: 12px;
+    // border-radius: 12px;
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
 }
@@ -52,14 +52,6 @@ ion-icon.inactive {
         transform: translateY(-10px);
     }
 }
-
-.exercise-button {
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-  }
   
   .completed {
     text-decoration: line-through;
@@ -68,5 +60,17 @@ ion-icon.inactive {
   .exercise-card {
     margin-top: 20px;
   }
-  
 
+  .exercise-fill-header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    h2 {
+        font-weight: bolder;
+    }
+  }
+
+  .item-field {
+    border-radius: 8px;
+    --inner-padding-end: 0px;
+    padding-inline-end: 0px;
+  }
