--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -19,13 +19,13 @@ ion-card, ion-item {
     opacity: 1;
 }
 
-ion-icon.active {
-    color: #457b9d;
-}
+// ion-icon.active {
+//     color: #457b9d;
+// }
 
-ion-icon.inactive {
-    color: grey;
-}
+// ion-icon.inactive {
+//     color: grey;
+// }
 
 .schedule-value-icon {
     // color: #1D3557;
