--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -80,11 +80,6 @@ body[color-theme="dark"] {
     background-color: #4185ff;
   }
 
-  .exercise-button {
-    background-color: #4185ff;
-    color: white;
-  }
-
   .message .message-content{
     background-color: rgb(201, 201, 201);
     color: black;
@@ -111,4 +106,11 @@ body[color-theme="dark"] {
     border-radius: 50%;
     // border: 2px solid var(--primary-color);
   }
+
+  .schedule-content-card.md {
+    ion-icon{
+      color: #4185FF;
+    }
+  }
+  
 }
