--- a/src/app/pages/otheruser/schedule-content/schedule-content.component.scss
+++ b/src/app/pages/otheruser/schedule-content/schedule-content.component.scss
@@ -1,9 +1,3 @@
-ion-item {
-}
-
-ion-button {
-}
-
 ion-card {
     margin: 8px;
     border-radius: 2px;
@@ -12,3 +6,9 @@ ion-card {
 .schedule-value {
     margin-left: 10px;
 }
+
+.item-field {
+    border-radius: 8px;
+    --inner-padding-end: 0px;
+    padding-inline-end: 0px;
+  }
