--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -87,7 +87,8 @@
   <ion-modal #modal trigger="open-modal" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]">
     <ng-template>
       <ion-content>
-        <ion-searchbar placeholder="Search" (click)="modal.setCurrentBreakpoint(0.75)"></ion-searchbar>
+        <!-- <ion-searchbar placeholder="Search" (click)="modal.setCurrentBreakpoint(0.75)"></ion-searchbar> -->
+        <h2 class="ion-text-center">Your Sweat buddies</h2>
         <ion-list class="friends-list">
           <ion-item  *ngFor="let friend of friends" lines="none" (click)="stageUser(friend,modal)">
             <ion-avatar slot="start">
