--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -20,9 +20,10 @@
                   <ion-label class="user-name-label">
                     <h2 class="user-name">{{ chatFriend.user.displayName! }}</h2>
                   </ion-label>
-                  <p class="timestamp">{{ chatFriend.lastChat!.date?.toDate() | date:'MMM d, hh:mm a' }}</p>
+                  <p class="timestamp" *ngIf="!isNull(chatFriend.lastChat?.date)">{{ chatFriend.lastChat?.date?.toDate() | date:'MMM d, hh:mm a' }}</p>
+                  <!-- <p *ngIf="!isNull(chatFriend.lastChat?.date)">{{"message deleted..."}}</p> -->
                 </div>
-                <p class="last-message">{{"~ " + chatFriend.lastChat!.text }}</p>
+                <p class="last-message">{{"~ " + chatFriend.lastChat?.text }}</p>
               </ion-label>
             </ion-item>
 
