--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -89,7 +89,7 @@
     <ng-template>
       <ion-content>
         <!-- <ion-searchbar placeholder="Search" (click)="modal.setCurrentBreakpoint(0.75)"></ion-searchbar> -->
-        <h2 class="ion-text-center">Your Sweat buddies</h2>
+        <h2 class="ion-text-center">Your Sweat Buddies</h2>
         <ion-list class="friends-list">
           <ion-item  *ngFor="let friend of friends" lines="none" (click)="stageUser(friend,modal)">
             <ion-avatar slot="start">
