--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -10,7 +10,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      SweatSession is a fitness app that allows users to track their workouts progress, and make some friends along the way.
+      SweatSession is a fitness app that allows users to track their workout progress and connect with friends.
     </ion-card-content>
   
     <button class="learn-more getSButton" routerLink="/login">
