Changed chatbot logo background and assets

--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -39,6 +39,8 @@ body[color-theme="dark"] {
   --ion-modal-background-color: #001b34;
   --ion-fab-button-color: #010a1b;
 
+  --background-image: url('../assets/Asset 19.png');
+
   ion-text, p {
     color: var(--ion-text-color);
   }
