--- a/src/theme/light-theme.scss
+++ b/src/theme/light-theme.scss
@@ -47,6 +47,8 @@ body[color-theme="light"] {
   --ion-modal-background-color: var(--background-color);
   --ion-label-color: var(--primary-color);
   
+  --background-image: url('../assets/Asset 2.png');
+
   ion-menu-button {
     color: var(--primary-text-color);
   }
