--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -57,7 +57,7 @@ ion-footer{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../../../assets/Asset 2.png') no-repeat center/contain fixed;
+    background: var(--background-image) no-repeat center/contain fixed;
     pointer-events: none;
     background-size: 90% auto;
     background-position: center;
@@ -70,7 +70,7 @@ ion-footer{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../../../assets/Asset 2.png') no-repeat center/contain fixed; 
+    background: var(--background-image) no-repeat center/contain fixed;
     z-index: -1;
     pointer-events: none;
     transition: filter 0.3s;
