--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -63,7 +63,7 @@
             labelPlacement="end" 
             justify="start"
             [checked]="exercise.completed"
-            [disabled]="exercise.completed"
+            [disabled]="schedule.filledExerciseList"
             (ionChange)="toggleExerciseCompletion(exercise)">
           </ion-checkbox>
           <ion-label [ngClass]="{ 'completed':  exercise.completed  }">
