--- a/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
+++ b/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
@@ -71,6 +71,5 @@
       </ion-note>
     </ion-col>
   </ion-row>
-  <ion-button expand="block" (click) = "editSchedule()"  style="padding-top: 5px">Save</ion-button>
-  <!-- [disabled]="!isChange" -->
+  <ion-button expand="block" (click) = "editSchedule()" [disabled]="!isChange" style="padding-top: 5px">Save</ion-button>
 </ion-grid>
