--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -77,7 +77,9 @@
   </div>
 
   <ion-card-content *ngIf="isEditSlide">
-    <edit-schedule [schedule]="schedule"></edit-schedule>
+    <edit-schedule 
+      [schedule]="schedule"
+      [exercises]="exercises"></edit-schedule>
   </ion-card-content>
 
   <div class="info">
