Change imgs workout tracking

--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -7,7 +7,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <div class="image-container">
+  <div class="image-container" *ngIf="darkmode">
+    <img src="../../../assets/Asset 19.png" alt="Image" class="centered-image"/>
+  </div>
+  <div class="image-container" *ngIf="!darkmode">
     <img src="../../../assets/Asset 2.png" alt="Image" class="centered-image"/>
   </div>
 
