--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -7,89 +7,94 @@
       <h2 style="font-size: 20px;">Add your workout plan</h2>
     </div>
     <div class="grid-container ion-text-center">
-      <select
-        class="submit"
-        placeholder="name"
-        (change)="workoutSelected($event)"
-      >
-        <option value="" hidden selected>Import a Workout</option>
-        <option *ngFor="let workout of plannedWorkouts" [value]="workout.id">{{ workout.name }}</option>
-      </select>
       <div class="form-container">
-
         <form [formGroup]="workoutForm">
-          <div formArrayName="exercises" *ngFor="let exercise of exercises.controls; index as i">
-            <div class="exercise-number">Exercise {{ i + 1 }}</div>
-            <div [formGroupName]="i">
-              <div class="inputField-container">
-                <!-- <ion-label>Exercise name*</ion-label> -->
-                <ion-item lines="none" class="input-field">
-                  <ion-select label="Exercise name" labelPlacement="stacked" formControlName="name" placeholder="Select an exercise" (ionChange)="exerciseSelected($event, i)">
-                    <ion-select-option value="Barbell Curls">Barbell Curls</ion-select-option>
-                    <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
-                    <ion-select-option value="Bench Presses">Bench Presses</ion-select-option>
-                    <ion-select-option value="Bicep Curls">Bicep Curls</ion-select-option>
-                    <ion-select-option value="Burpees">Burpees</ion-select-option>
-                    <ion-select-option value="Calf Raises">Calf Raises</ion-select-option>
-                    <ion-select-option value="Chest Press">Chest Press</ion-select-option>
-                    <ion-select-option value="Crunches">Crunches</ion-select-option>
-                    <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
-                    <ion-select-option value="Dumbbell Rows">Dumbbell Rows</ion-select-option>
-                    <ion-select-option value="Jumping Jacks">Jumping Jacks</ion-select-option>
-                    <ion-select-option value="Leg Curls">Leg Curls</ion-select-option>
-                    <ion-select-option value="Leg Presses">Leg Presses</ion-select-option>
-                    <ion-select-option value="Lunges">Lunges</ion-select-option>
-                    <ion-select-option value="Planks">Planks</ion-select-option>
-                    <ion-select-option value="Pull-Ups">Pull-Ups</ion-select-option>
-                    <ion-select-option value="Push-Ups">Push-Ups</ion-select-option>
-                    <ion-select-option value="Seated Cable Rows">Seated Cable Rows</ion-select-option>
-                    <ion-select-option value="Sit-Ups">Sit-Ups</ion-select-option>
-                    <ion-select-option value="Squats">Squats</ion-select-option>
-                    <ion-select-option value="Stretches">Stretches</ion-select-option>
-                    <ion-select-option value="Tricep Curls">Tricep Curls</ion-select-option>
-                  </ion-select>
-                </ion-item>
-              </div>
-  
-             <ion-row>
-               <ion-col size="6" size-lg="3">
-                <div class="inputField-container" *ngIf="hasSets(i)">
-                  <!-- <ion-label>Sets*</ion-label> -->
-                  <ion-item lines="none" class="input-field">
-                    <ion-input label="Sets*" labelPlacement="stacked" formControlName="sets" type="number" placeholder="Sets"></ion-input>
-                  </ion-item>
-                </div>
-               </ion-col>
-               <ion-col size="6" size-lg="3">
-                <div class="inputField-container" *ngIf="hasReps(i)">
-                  <!-- <ion-label>Reps*</ion-label> -->
-                  <ion-item lines="none" class="input-field">
-                    <ion-input label="Reps*" labelPlacement="stacked" formControlName="reps" type="number" placeholder="Repetitions"></ion-input>
-                  </ion-item>
-                </div>
-               </ion-col>
-               <ion-col size="6" size-lg="3">
-                <div class="inputField-container" *ngIf="hasWeight(i)">
-                  <!-- <ion-label>Weight*</ion-label> -->
-                  <ion-item lines="none" class="input-field">
-                    <ion-input label="Weight(kg)*" labelPlacement="stacked" formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
-                  </ion-item>
-                </div>
-               </ion-col>
-               <ion-col size="6" size-lg="3">
-                <div class="inputField-container">
-                  <!-- <ion-label>Duration*</ion-label> -->
-                  <ion-item lines="none" class="input-field">
-                    <ion-input label="Duration(min)*" labelPlacement="stacked" formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
-                  </ion-item>
-                </div>
-               </ion-col>
-             </ion-row>
-            </div>
-            <ion-button color="danger" type="button" (click)="deleteExercise(i)">
-              <ion-icon name="trash"></ion-icon>
-            </ion-button>
+          <div class="inputField-container">
+            <ion-item lines="none" class="input-field">
+              <ion-select
+                placeholder="name"
+                (ionChange)="workoutSelected($event)"
+                label="Import Workout" labelPlacement="stacked"
+              >
+                <ion-select-option *ngFor="let workout of plannedWorkouts" [value]="workout.id">{{ workout.name }}</ion-select-option>
+              </ion-select>
+            </ion-item>
           </div>
+          <swiper-container  pagination="{hideOnClick: true}">
+            <swiper-slide formArrayName="exercises" *ngFor="let exercise of exercises.controls; index as i">
+              <div>
+                <div class="exercise-number">Exercise {{ i + 1 }}</div>
+                  <div [formGroupName]="i">
+                    <div class="inputField-container">
+                      <ion-item lines="none" class="input-field">
+                        <ion-select label="Exercise name" labelPlacement="stacked" formControlName="name" placeholder="Select an exercise" (ionChange)="exerciseSelected($event, i)">
+                          <ion-select-option value="Barbell Curls">Barbell Curls</ion-select-option>
+                          <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+                          <ion-select-option value="Bench Presses">Bench Presses</ion-select-option>
+                          <ion-select-option value="Bicep Curls">Bicep Curls</ion-select-option>
+                          <ion-select-option value="Burpees">Burpees</ion-select-option>
+                          <ion-select-option value="Calf Raises">Calf Raises</ion-select-option>
+                          <ion-select-option value="Chest Press">Chest Press</ion-select-option>
+                          <ion-select-option value="Crunches">Crunches</ion-select-option>
+                          <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
+                          <ion-select-option value="Dumbbell Rows">Dumbbell Rows</ion-select-option>
+                          <ion-select-option value="Jumping Jacks">Jumping Jacks</ion-select-option>
+                          <ion-select-option value="Leg Curls">Leg Curls</ion-select-option>
+                          <ion-select-option value="Leg Presses">Leg Presses</ion-select-option>
+                          <ion-select-option value="Lunges">Lunges</ion-select-option>
+                          <ion-select-option value="Planks">Planks</ion-select-option>
+                          <ion-select-option value="Pull-Ups">Pull-Ups</ion-select-option>
+                          <ion-select-option value="Push-Ups">Push-Ups</ion-select-option>
+                          <ion-select-option value="Seated Cable Rows">Seated Cable Rows</ion-select-option>
+                          <ion-select-option value="Sit-Ups">Sit-Ups</ion-select-option>
+                          <ion-select-option value="Squats">Squats</ion-select-option>
+                          <ion-select-option value="Stretches">Stretches</ion-select-option>
+                          <ion-select-option value="Tricep Curls">Tricep Curls</ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </div>
+    
+                    <ion-row>
+                      <ion-col size="6" size-lg="3">
+                        <div class="inputField-container" *ngIf="hasSets(i)">
+                          <!-- <ion-label>Sets*</ion-label> -->
+                          <ion-item lines="none" class="input-field">
+                            <ion-input label="Sets*" labelPlacement="stacked" formControlName="sets" type="number" placeholder="Sets"></ion-input>
+                          </ion-item>
+                        </div>
+                      </ion-col>
+                      <ion-col size="6" size-lg="3">
+                        <div class="inputField-container" *ngIf="hasReps(i)">
+                          <!-- <ion-label>Reps*</ion-label> -->
+                          <ion-item lines="none" class="input-field">
+                            <ion-input label="Reps*" labelPlacement="stacked" formControlName="reps" type="number" placeholder="Repetitions"></ion-input>
+                          </ion-item>
+                        </div>
+                      </ion-col>
+                      <ion-col size="6" size-lg="3">
+                        <div class="inputField-container" *ngIf="hasWeight(i)">
+                          <!-- <ion-label>Weight*</ion-label> -->
+                          <ion-item lines="none" class="input-field">
+                            <ion-input label="Weight(kg)*" labelPlacement="stacked" formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
+                          </ion-item>
+                        </div>
+                      </ion-col>
+                      <ion-col size="6" size-lg="3">
+                        <div class="inputField-container">
+                          <!-- <ion-label>Duration*</ion-label> -->
+                          <ion-item lines="none" class="input-field">
+                            <ion-input label="Duration(min)*" labelPlacement="stacked" formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
+                          </ion-item>
+                        </div>
+                      </ion-col>
+                    </ion-row>
+                  </div>
+                <ion-button color="danger" type="button" (click)="deleteExercise(i)">
+                  <ion-icon name="trash"></ion-icon>
+                </ion-button>
+              </div>
+            </swiper-slide>
+          </swiper-container>
   
           <ion-button class="adder" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
             <ion-icon name="add"></ion-icon>
