commented out unimplemented features

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,9 +26,9 @@
               </ion-item>
             </div>
 
-            <div class="forgot-password">
+            <!-- <div class="forgot-password">
               <ion-text>Forgot password?</ion-text>
-            </div>
+            </div> -->
 
             <div class="button-container">
               <ion-button id="loginButton" expand="block" type="submit">Login</ion-button>
