--- a/src/app/pages/groups/group-home-page/group-home-page.component.html
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.html
@@ -71,7 +71,7 @@
       <ion-segment (ionChange)="onSegmentChange($event)" value="members" [scrollable]="true">
         <ion-segment-button value="members">Members</ion-segment-button>
         <ion-segment-button value="schedules">Workout Sessions</ion-segment-button>
-        <ion-segment-button value="leaderboard">Leaderboard</ion-segment-button>
+        <!-- <ion-segment-button value="leaderboard">Leaderboard</ion-segment-button> -->
       </ion-segment>
   
       <div class="content" [hidden]="selectedSegment !== 'members'">
