--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -12,7 +12,7 @@
           <div class="inputField-container">
             <ion-item lines="none" class="input-field">
               <ion-select
-                placeholder="name"
+                placeholder="Workout Name"
                 (ionChange)="workoutSelected($event)"
                 label="Import Workout" labelPlacement="stacked"
               >
