Personal best Ui-Improvements

--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -17,52 +17,92 @@
 
   </ion-card>
 
-  <ion-card>
+
   <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" class="ion-padding">
-    <ion-item lines="none">
-      <ion-label>Select Exercise</ion-label>
-      <ion-select formControlName="exercise" placeholder="EXERCISE">
-        <ion-select-option value="Bench Press">Bench Press</ion-select-option>
-        <ion-select-option value="Squats">Squats</ion-select-option>
-        <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
-        <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
-        <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
-        <ion-select-option value="Push ups">Push ups</ion-select-option>
-      </ion-select>
-    </ion-item>
 
-    <ion-item lines="none">
-        <ion-label position="stacked">Weight(kg)</ion-label>
-        <ion-input placeholder="Enter Weight" formControlName="weight" type="number"></ion-input>
-    </ion-item>
-
-    <ion-item lines="none">
-        <ion-label position="stacked">Repetitions</ion-label>
-        <ion-input placeholder="Enter Reps" formControlName="reps" type="number"></ion-input>
-    </ion-item>
-
-    <ion-item lines="none">
-        <ion-label position="stacked">Date</ion-label>
-        <ion-input max="{{getTodayDate()}}" type="date" displayFormat="YYYY/MM/DD" formControlName="date"></ion-input>
-    </ion-item>
-
-    <ion-item lines="none">
-      <ion-label position="stacked">Location</ion-label>
-      <div class="wrapper">
-        <div class="input">
-          <ion-input type="text" formControlName="location" [placeholder]="myVariable" class="location"></ion-input>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Exercise</h2></ion-label>
+          <ion-item class="input-field" lines="none">
+            <ion-select placeholder="Select Exercise" labelPlacement="stacked" formControlName="exercise">
+              <ion-select-option value="Bench Press">Bench Press</ion-select-option>
+              <ion-select-option value="Squats">Squats</ion-select-option>
+              <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
+              <ion-select-option value="Overhead Press">Overhead Press</ion-select-option>
+              <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+              <ion-select-option value="Push ups">Push ups</ion-select-option>
+            </ion-select>
+          </ion-item>
         </div>
-        <div class="icon"> 
-          <ion-icon name="location-outline" (click)="openLocationModal()" class="location-icon"></ion-icon>
-        </div>
-      </div>
-    </ion-item>
-    
-    <ion-item lines="none">
-      <ion-label position="stacked">Notes</ion-label>
-      <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>
-    </ion-item>
+      </ion-col>
+    </ion-row>
 
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-xs="6" size-md="6" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Weight(kg)</h2></ion-label>
+          <ion-item class="input-field" lines="none">
+            <ion-input placeholder="Enter Weight" formControlName="weight" type="number"></ion-input>
+          </ion-item>
+        </div>
+      </ion-col>
+      <ion-col size="12" size-xs="6" size-md="6" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Repetitions</h2></ion-label>
+          <ion-item class="input-field" lines="none" lines = "none">
+            <ion-input placeholder="Enter Reps" formControlName="reps" type="number"></ion-input>
+          </ion-item>
+        </div>
+      </ion-col>
+    </ion-row>
+
+
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-xs="6" size-md="6" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Date</h2></ion-label>
+          <ion-item class="input-field" lines="none">
+            <ion-input max="{{getTodayDate()}}" type="date" displayFormat="YYYY/MM/DD" formControlName="date"></ion-input>
+          </ion-item>
+        </div>
+      </ion-col>
+      <ion-col size="12" size-xs="6" size-md="6" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Location</h2></ion-label>
+          <ion-item class="input-field" lines="none" lines = "none">
+            <div class="wrapper">
+              <div class="input">
+                <ion-input type="text" formControlName="location" [placeholder]="myVariable" class="location"></ion-input>
+              </div>
+              <div class="icon">
+                <ion-icon name="location-outline" (click)="openLocationModal()" class="location-icon"></ion-icon>
+              </div>
+            </div>
+          </ion-item>
+        </div>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-lg="6">
+        <div class="input-field-container">
+          <ion-label position="stacked"><h2 style="font-weight: bold">Notes</h2></ion-label>
+          <ion-item class="input-field" lines="none" lines = "none">
+<!--            <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>-->
+            <ion-textarea rows="4" autogrow="true" type="text" placeholder="leave a note" formControlName="notes"></ion-textarea>
+          </ion-item>
+        </div>
+      </ion-col>
+    </ion-row>
+
+<!--    <ion-item lines="none">-->
+<!--      <ion-label position="stacked">Notes</ion-label>-->
+<!--      <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>-->
+<!--    </ion-item>-->
+
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-lg="6">
     <ion-item lines="none">
       <ion-grid>
         <ion-row>
@@ -90,8 +130,9 @@
 
 
     </ion-item>
-
+        </ion-col>
+    </ion-row>
     <ion-button type="submit" class="submit-button" expand="block" [disabled]="!(isValid(PersonalBestForm.value) && isrepsvalid() && isweightvalid())"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
   </form>
-  </ion-card>
+
 </ion-content>
