--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -44,7 +44,7 @@
         
             <ion-grid>
           <ion-row>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p >{{notice.message}}</p>
+            &nbsp;<p >{{notice.message}}</p>
         </ion-row>
         </ion-grid>
     
