--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -2,10 +2,10 @@
   <ion-card class="full-screen-card">
    <div class="inner-wrapper">
     <div class="logo-container" *ngIf="darkmode">
-      <img class="logo-img" src="assets/sweatsessionlogotransparent1.png" alt="logo">
+      <img class="logo-img" src="../../../assets/Asset 21.png" alt="logo">
     </div>
     <div class="logo-container" *ngIf="!darkmode">
-      <img class="logo-img" src="assets/sweatsessionlogotransparent1.png" alt="logo">
+      <img class="logo-img" src="../../../assets/Asset 20.png" alt="logo">
     </div>
    
     <ion-card-header style="text-align: center;">
