--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -43,10 +43,10 @@
                 ></ion-input>
               </ion-item>
             </div>
-            <div class="remember-me-input">
+            <!-- <div class="remember-me-input">
               <ion-checkbox class="custom-checkbox"></ion-checkbox>
               <ion-label class="r-label">Remember me</ion-label>
-            </div>           
+            </div>            -->
 
             <div class="button-container">
               <ion-button id="loginButton" expand="block" type="submit">Register</ion-button>
