--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -110,6 +110,7 @@ button.learn-more .circle .icon.arrow::before {
   border-top: 0.125rem solid #fff;
   border-right: 0.125rem solid #fff;
   transform: rotate(45deg);
+  color: red;
 }
 
 button.learn-more .button-text {
@@ -121,7 +122,7 @@ button.learn-more .button-text {
   bottom: 0;
   padding: 0.75rem 0;
   margin: 0 0 0 1.85rem;
-  color: #ffffff;
+  // color: #ffffff;
   font-weight: 700;
   line-height: 1.6;
   text-align: center;
